--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style_portfolio.css" type="text/css">
+
+    <script src="https://kit.fontawesome.com/46047fbeed.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -87,26 +89,25 @@
                 <div class="col-lg-12">
                     <ul class="portfolio__filter">
                         <li class="active" data-filter="*">All</li>
-                        <li data-filter=".branding">Branding</li>
-                        <li data-filter=".digital-marketing">Digital marketing</li>
+                        <li data-filter=".branding">Cartoon</li>
+                        <li data-filter=".digital-marketing">Animation 2D</li>
                         <li data-filter=".web">Web</li>
-                        <li data-filter=".photography">Photography</li>
-                        <li data-filter=" .ecommerce">eCommerce</li>
+                        <li data-filter=".photography">Project</li>
+                        <li data-filter=" .ecommerce">Traditional</li>
                     </ul>
                 </div>
             </div>
             <div class="row portfolio__gallery">
                 <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
                     <div class="portfolio__item">
-                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-1.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
-                                    class="fa fa-play"></i></a>
+                        <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/CartoonCharacter.png">
+                            <a href="#"></a>
                         </div>
                         <div class="portfolio__item__text">
-                            <h4>VIP Auto Tires & Service</h4>
+                            <h4>The Cartoon Character</h4>
                             <ul>
-                                <li>eCommerce</li>
-                                <li>Magento</li>
+                                <li>Cartoon</li>
+                                <li>Digital Drawing</li>
                             </ul>
                         </div>
                     </div>
@@ -114,7 +115,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix digital-marketing">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-2.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
@@ -126,7 +127,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix web">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-3.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
@@ -141,7 +142,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-4.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
@@ -156,7 +157,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-5.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
@@ -168,7 +169,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix branding">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-6.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
@@ -183,7 +184,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix web">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-7.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
@@ -198,7 +199,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix photography">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-8.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
@@ -210,7 +211,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 mix ecommerce">
                     <div class="portfolio__item">
                         <div class="portfolio__item__video set-bg" data-setbg="img/portfolio/portfolio-9.jpg">
-                            <a href="https://www.youtube.com/watch?v=LXb3EKWsInQ" class="play-btn video-popup"><i
+                            <a href="#" class="play-btn video-popup"><i
                                     class="fa fa-play"></i></a>
                         </div>
                         <div class="portfolio__item__text">
