--- a/about.html
+++ b/about.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
+
+    <script src="https://kit.fontawesome.com/46047fbeed.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
